[package]
name = "postoffice"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bytes = "1.10.1"
clap = { version = "4.5.38", features = ["derive"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }
regex = "1.12.2"
rosc = "0.11.4"
rumqttc = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
